# heterogeneous_robot_team

./: README.md  README.md~  README.txt  README.txt~  tablolar.docx  tablolar.odt
cloud_metric/: CMakeLists.txt  README.md  package.xml
cloud_metric/scripts/: plot_all.py  plot_resolution.py  plot_total.py
cloud_metric/src/data/resolution_0_0_1/o_o/: total_distance_av.txt  uav_distance_av.txt
cloud_metric/src/data/resolution_0_0_1/o_r/: ugv_occupancy_volume.txt
cloud_metric/src/data/resolution_0_0_1/r_o/: total_distance_av.txt  ugv_occupancy_volume.txt
cloud_metric/src/data/resolution_0_0_1/r_r/: total_occupancy_volume.txt  ugv_occupancy_volume.txt
cloud_metric/src/data/resolution_0_0_5/o_o/: total_distance_av.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_occupancy_volume.txt
cloud_metric/src/data/resolution_0_0_5/o_r/: uav_occupancy_volume.txt  ugv_occupancy_volume.txt
cloud_metric/src/data/resolution_0_0_5/r_r/: total_distance_av.txt  ugv_occupancy_volume.txt
cloud_metric/src/data/resolution_0_1/o_o/: total_occupancy_volume.txt  uav_occupancy_volume.txt  ugv_distance_av.txt
hetero_demo/: CMakeLists.txt  package.xml
hetero_demo/launch/: outdoor_gazebo.launch  outdoor_rviz.launch
hetero_demo/rviz/: config.rviz  hetero.rviz
hetero_gazebo_worlds/: CMakeLists.txt  package.xml
hetero_mapping/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
hetero_mapping/launch/: map_merging.launch  octomap.launch  octomap.launch~
hetero_mapping/scripts/: plot.py  plot_all.py  plot_all.py~
hetero_mapping/src/: cloud_feature.cpp  cloud_filter.cpp  cloud_merge.cpp  cloud_merge_real.cpp  cloud_merge_v1.cpp  cloud_merge_v2.cpp  cloud_metric.cpp  deneme.txt~  distance_av.txt~  gicp_cloud_merge.cpp  occupancy_volume.txt~  pcd_view.cpp  total_distance_av.txt~  total_occupancy_volume.txt~  uav_distance_av.txt~  uav_mapping_real.cpp  uav_occupancy_volume.txt~  ugv_distance_av.txt~  ugv_occupancy_volume.txt~
hetero_mapping/src/data/h_h/: total_distance_av.txt  total_occupancy_volume.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/data/h_v/: total_distance_av.txt  total_occupancy_volume.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/data/v_h/: total_distance_av.txt  total_occupancy_volume.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/data/v_v/: total_distance_av.txt  total_occupancy_volume.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/pcd/v_h/: ugv.pcd
hetero_mapping/src/resolution_0_0_1/o_o/: total_occupancy_volume.txt  uav_occupancy_volume.txt  ugv_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/resolution_0_0_1/o_r/: total_distance_av.txt  total_occupancy_volume.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt
hetero_mapping/src/resolution_0_0_1/r_o/: total_occupancy_volume.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt
hetero_mapping/src/resolution_0_0_1/r_r/: total_distance_av.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt
hetero_mapping/src/resolution_0_0_5/o_o/: total_occupancy_volume.txt  ugv_distance_av.txt
hetero_mapping/src/resolution_0_0_5/o_r/: total_distance_av.txt  total_occupancy_volume.txt  uav_distance_av.txt  ugv_distance_av.txt
hetero_mapping/src/resolution_0_0_5/r_o/: total_distance_av.txt  total_occupancy_volume.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/resolution_0_0_5/r_r/: total_occupancy_volume.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt
hetero_mapping/src/resolution_0_1/o_o/: total_distance_av.txt  uav_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/resolution_0_1/o_r/: total_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt
hetero_mapping/src/resolution_0_1/r_o/: total_distance_av.txt  total_occupancy_volume.txt  uav_occupancy_volume.txt  ugv_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/resolution_0_1/r_r/: uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt
hetero_mapping/src/resolution_0_2/o_o/: total_distance_av.txt  total_occupancy_volume.txt  uav_occupancy_volume.txt  ugv_occupancy_volume.txt
hetero_mapping/src/resolution_0_2/o_r/: total_distance_av.txt  total_occupancy_volume.txt  ugv_occupancy_volume.txt
hetero_mapping/src/resolution_0_2/r_o/: total_distance_av.txt  total_occupancy_volume.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/resolution_0_2/r_r/: total_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/resolution_0_3/o_o/: total_occupancy_volume.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_occupancy_volume.txt
hetero_mapping/src/resolution_0_3/o_r/: total_distance_av.txt  total_occupancy_volume.txt  uav_distance_av.txt  uav_occupancy_volume.txt  ugv_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/resolution_0_3/r_o/: total_distance_av.txt  total_occupancy_volume.txt  uav_distance_av.txt  ugv_occupancy_volume.txt
hetero_mapping/src/resolution_0_3/r_r/: total_occupancy_volume.txt  ugv_distance_av.txt  ugv_occupancy_volume.txt
hetero_waypoint/: CMakeLists.txt  package.xml
hetero_waypoint/launch/: hetero_waypoint_nav.launch  hetero_waypoint_nav.launch~
hetero_waypoint/launch/outdoor/: outdoor_waypoint_nav.launch
hetero_waypoint/src/: uav_waypoint_controller.cpp  ugv_waypoint_controller.cpp  waypoint (copy).cpp
husky/ugv_control/: CMakeLists.txt  package.xml
husky/ugv_control/config/: control.yaml  localization.yaml  teleop.yaml  twist_mux.yaml
husky/ugv_control/launch/: control.launch  teleop.launch  teleop_joy_ps3.launch
husky/ugv_control/src/: teleop_joy_ps3.cpp
(+78 files in other folders)
