<?xml version="1.0"?>
<package>
  <name>ugv_control</name>
  <version>0.2.7</version>
  <description>Clearpath Husky controller configurations</description>

  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_control</url>
  <url type="bugtracker">https://github.com/husky/husky/issues</url>
  <url type="repository">https://github.com/husky/husky</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
<build_depend>geographic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geographic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
